<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>one.chartsy</groupId>
        <artifactId>chartsy-repository</artifactId>
        <version>0.2-SNAPSHOT</version>
    </parent>

    <artifactId>chartsy-desktop</artifactId>
    <packaging>pom</packaging>
    <modules>
        <module>chartsy-exploration</module>
        <module>chartsy-ide-engine</module>
        <module>chartsy-kernel-frontend</module>
        <module>chartsy-nb-frontend</module>
        <module>chartsy-ui</module>
        <module>chartsy-ui-chart</module>
        <module>chartsy-ui-chart-overlays</module>
        <module>chartsy-ui-chartfx</module>
        <module>chartsy-ui-common</module>
        <module>chartsy-ui-logging</module>
    </modules>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>
